http://jira.aplana.com/browse/SBRFACCTAX-7356 Ошибка при импорте справочников ЦАС НСИ